# pet-ota

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  params.yaml  pyproject.toml
.github/workflows/: ci.yml  no-wandb-residue.yml  peer-dep-smoke.yml
docs/: architecture.md  phase-3b-audit.md
docs/superpowers/plans/: 2026-04-15-pet-ota-implementation.md
docs/superpowers/specs/: 2026-04-15-pet-ota-design.md
src/pet_ota/: __init__.py  config.py
src/pet_ota.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pet_ota/backend/: __init__.py  base.py  local.py
src/pet_ota/monitoring/: __init__.py  alert.py  check_update_rate.py
src/pet_ota/packaging/: __init__.py  create_deployment.py  make_delta.py  upload_artifact.py
src/pet_ota/plugins/: __init__.py  _register.py
src/pet_ota/plugins/backends/: __init__.py  http.py  local.py  s3.py
src/pet_ota/release/: __init__.py  canary_rollout.py  check_gate.py  rollback.py
tests/: conftest.py  test_alert.py  test_canary_rollout.py  test_check_gate.py  test_check_update_rate.py  test_config.py  test_create_deployment.py  test_gate_enforcement.py  test_local_backend.py  test_local_backend_plugin.py  test_make_delta.py  test_plugin_skeleton.py  test_register.py  test_rollback.py  test_upload_artifact.py  test_version.py
tests/peer_dep/: test_smoke_versions.py
tests/plugins/backends/: conftest.py  test_http_backend.py  test_s3_backend.py
