[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-ota"
version = "2.1.0"
requires-python = ">=3.11,<3.12"
license = {text = "BUSL-1.1"}
dependencies = [
    "bsdiff4>=1.2.0,<2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tenacity",
    # pet-infra is a β peer-dep (install order enforced by CI + README
    # Prerequisites, not by pyproject resolution). See DEV_GUIDE §11.1.
    # Same option-X delayed-guard pattern adopted by pet-quantize Phase 7.
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "boto3>=1.34",
    "moto[s3]>=5.0",
]
signing = [
    "pet-quantize>=1.0.0",
]

[project.entry-points."pet_infra.plugins"]
pet_ota = "pet_ota.plugins._register:register_all"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pet_ota", "pet_ota.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["bsdiff4", "pet_quantize.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
